--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,7 +19,6 @@
         left 150px;
 	}
 
-
 .container{
 	max-width: 1120px;
 	margin: 0 auto;
@@ -28,225 +27,8 @@
 }
 
 // 首頁起
-.banner{
-	width: 100%;
-	display: flex;
-	align-items: center;
-	&Content{
-		width: 49%;
-	}
-	&Img{
-		width: 49%;
-	}
-}
 
-.plantform{
-    width: 100%;
-	margin-top: 217px;
-	position: relative;
-    &Title{
-        text-align: center;
-    }
-
-}
-
-.cusmers{
-	width: 100%;
-	margin-top: 100px;
-	margin-bottom: 100px;
-	position: relative;
-	&Title{
-		color: $colorB;
-		text-align: center;
-	}
-
-	&Content{
-		color: $colorB;
-		text-align: center;
-		margin: 16px 0px 48px 0px;
-	}
-}
-
-.function{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-
-	&Cards{
-		width: 49%;
-	}
-
-	&Content{
-		width: 49%;
-	}
-
-	&Content{
-
-		&Title{
-			margin-top: 165px;
-			margin-bottom: 16px;
-			margin-left: 16%;
-		}
-
-		&Content{
-			margin-bottom: 40px;
-			margin-left: 16%;
-		}
-
-		&Btn{
-			margin-left: 16%;
-		}
-
-	}
-
-}
-
-.proof{
-	margin-top: 72px;
-	position: relative;
-	&Title{
-	text-align: center;
-	}
-}
-
-.CTA{
-	padding-bottom: 117px;
-	position: relative;
-
-	&Content{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-
-	&Btn{
-		margin-top: 36px;
-	}
-
-	&Bg{
-		width: 100%;
-
-		&SM{
-			display: none;
-		}
-	}
-	
-}
-// 首頁終
-
-
-// 價格頁起
-.priceBanner{
-
-	&Title{
-		margin-top: 92px;
-		margin-bottom: 16px;
-	}
-	&Img{
-		position: absolute;
-		top: 0;
-		right: 0;
-
-		&Mobile{
-			display: none;
-		}
-	}
-}
-
-.plan{
-
-	text-align: center;
-
-	&Title{
-		margin-top: 100px;
-		margin-bottom: 48px;
-	}
-
-	&Btns{
-		display: flex;
-		justify-content: center;
-		margin-bottom: 60px;
-	}
-
-	&Btn{
-		margin: 0px 8px;
-	}
-
-	&Cards{
-			display: flex;
-			justify-content: center;
-	}
-
-}
-
-.QA{
-
-	padding: 0 15%;
-	margin-bottom: 100px;
-
-	&Title{
-		margin-bottom: 48px;
-		text-align: center;
-	}
-
-	&List{
-
-		& li {
-			box-shadow: 0px 2px 10px #00000014;
-			border-radius: 12px;
-		}
-
-		&Title{
-			padding: 16px 0px 16px 32px;
-			margin: 8px 0px;
-			position: relative;
-			cursor: pointer;
-
-			&:hover{
-				color: $colorG;
-			}
-
-			&Close::after{
-				content: '';
-				background-image: url(../img/icon_plus.svg);
-				background-repeat: no-repeat;
-				width: 20px;
-				height: 20px;
-				display: inline-block;
-				position: absolute;
-				right: 32px;
-			}
-
-			&Open::after{
-				content: '';
-				background-image: url(../img/icon_minus.svg);
-				background-repeat: no-repeat;
-				width: 20px;
-				height: 20px;
-				vertical-align: baseline;
-				display: inline-block;
-				position: absolute;
-				right: 32px;
-			}
-			
-		}
-
-		&Content{
-
-			&Open{
-				padding: 16px 0px 24px 32px;
-			}	
-			&Close{
-				display: none;
-			}
-			
-		}
-	}	
-}
-
-// 價格頁終
-
-
+@import "pages/index";
+@import "pages/price";
 @import "pad";
 @import "phone";
