--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -57,6 +57,7 @@
 	color: white;
 	text-align: center;
 	line-height: 71px;
+    text-decoration: none;
 
     &:hover{
         border:1px solid $colorG;
