--- a/styles/main.css
+++ b/styles/main.css
@@ -382,7 +382,6 @@ body {
 }
 
 .backgroundTop {
-  max-width: auto;
   position: absolute;
   top: 0;
   right: 0;
@@ -484,6 +483,7 @@ footer {
   color: white;
   text-align: center;
   line-height: 71px;
+  text-decoration: none;
 }
 
 .toTopBtn:hover {
@@ -713,8 +713,6 @@ body {
   content: '';
   background-image: url(../img/icon_plus.svg);
   background-repeat: no-repeat;
-  width: 20px;
-  height: 20px;
   display: inline-block;
   position: absolute;
   right: 32px;
@@ -724,8 +722,6 @@ body {
   content: '';
   background-image: url(../img/icon_minus.svg);
   background-repeat: no-repeat;
-  width: 20px;
-  height: 20px;
   vertical-align: baseline;
   display: inline-block;
   position: absolute;
@@ -740,7 +736,7 @@ body {
   display: none;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 790px) {
   .planBtns {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
